force-app/main/default/objects/Product2/Product2.object-meta.xml
<CustomObject>
    <!--    <compactLayoutAssignment>SYSTEM</compactLayoutAssignment>
-->
    <!-- <recordTypeTrackHistory>false</recordTypeTrackHistory>
-->
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>