force-app/main/default/objects/Product2/fields/Asset_Section__c.field-meta.xml
<CustomField>
    <fullName>Asset_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Section</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Products (Asset Section)</relationshipLabel>
    <relationshipName>Products2</relationshipName>
    <type>Lookup</type>
</CustomField>