force-app/main/default/objects/Product2/fields/Bank_s_Fee__c.field-meta.xml
<CustomField>
    <fullName>Bank_s_Fee__c</fullName>
    <label>Bank&apos;s Fee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>