force-app/main/default/objects/Product2/fields/Ground_mount__c.field-meta.xml
<CustomField>
    <fullName>Ground_mount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies non-roof panels</description>
    <label>Ground-mount</label>
    <type>Checkbox</type>
</CustomField>