force-app/main/default/objects/Product2/fields/Macaron_Flavor__c.field-meta.xml
<CustomField>
    <fullName>Macaron_Flavor__c</fullName>
    <defaultValue>CASE(MONTH(TODAY()), 1, &quot;Gingerbread&quot;, 2, &quot;Strawberry&quot;, 4, &quot;Chocolate&quot;, 7, &quot;Raspberry&quot;, 11, &quot;Pumpkin&quot;, 12, &quot;Mint&quot;, &quot;Vanilla&quot;)</defaultValue>
    <label>Macaron Flavor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Flavors</valueSetName>
    </valueSet>
</CustomField>