force-app/main/default/objects/Product2/fields/Occupation_Code__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Occupation Code</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Products (Occupation Code)</relationshipLabel>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>