force-app/main/default/objects/Product2/fields/Product_Class__c.field-meta.xml
<CustomField>
    <fullName>Product_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Class</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Product Class)</relationshipLabel>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>