force-app/main/default/objects/Product2/fields/Product_Identificator__c.field-meta.xml
<CustomField>
    <fullName>Product_Identificator__c</fullName>
    <label>Product Identificator</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>23</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>26</fullName>
            </value>
            <value>
                <fullName>27</fullName>
            </value>
            <value>
                <fullName>28</fullName>
            </value>
            <value>
                <fullName>29</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>31</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>201</fullName>
            </value>
            <value>
                <fullName>202</fullName>
            </value>
            <value>
                <fullName>203</fullName>
            </value>
            <value>
                <fullName>204</fullName>
            </value>
            <value>
                <fullName>205</fullName>
            </value>
            <value>
                <fullName>206</fullName>
            </value>
            <value>
                <fullName>207</fullName>
            </value>
            <value>
                <fullName>208</fullName>
            </value>
            <value>
                <fullName>209</fullName>
            </value>
            <value>
                <fullName>210</fullName>
            </value>
            <value>
                <fullName>211</fullName>
            </value>
            <value>
                <fullName>212</fullName>
            </value>
            <value>
                <fullName>213</fullName>
            </value>
            <value>
                <fullName>214</fullName>
            </value>
            <value>
                <fullName>215</fullName>
            </value>
            <value>
                <fullName>216</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>