force-app/main/default/objects/Product2/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Line</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Product Line)</relationshipLabel>
    <relationshipName>Products2</relationshipName>
    <type>Lookup</type>
</CustomField>