force-app/main/default/objects/Product2/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <formula>ProductCode + &apos; - &apos; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>