force-app/main/default/objects/Product2/fields/Rate_Class_1_Max__c.field-meta.xml
<CustomField>
    <fullName>Rate_Class_1_Max__c</fullName>
    <label>Rate Class 1 Max</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>