force-app/main/default/objects/Product2/fields/Rate_Class_2_Min__c.field-meta.xml
<CustomField>
    <fullName>Rate_Class_2_Min__c</fullName>
    <label>Rate Class 2 Min</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>