force-app/main/default/objects/Product2/fields/REGULATORY_REGISTRATION_NO__c.field-meta.xml
<CustomField>
    <fullName>REGULATORY_REGISTRATION_NO__c</fullName>
    <label>REGULATORY REGISTRATION NO.</label>
    <type>Date</type>
</CustomField>