force-app/main/default/objects/Product2/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Marine &amp; Financial</fullName>
            </value>
            <value>
                <fullName>Special Lines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>