force-app/main/default/objects/Product2/fields/Shirt__c.field-meta.xml
<CustomField>
    <fullName>Shirt__c</fullName>
    <label>Shirt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Flavors</valueSetName>
    </valueSet>
</CustomField>