force-app/main/default/objects/Product2/fields/Sum_Insured_Max__c.field-meta.xml
<CustomField>
    <fullName>Sum_Insured_Max__c</fullName>
    <label>Sum Insured Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>