force-app/main/default/objects/Product2/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Segment</fullName>
            </value>
            <value>
                <fullName>Product Class</fullName>
            </value>
            <value>
                <fullName>Product Line</fullName>
            </value>
            <value>
                <fullName>Product Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>