force-app/main/default/objects/Product2/recordTypes/Master_Data.recordType-meta.xml
<RecordType>
    <fullName>Master_Data</fullName>
    <active>true</active>
    <label>Master Data</label>
</RecordType>