force-app/main/default/objects/Product2/listViews/Product_Type.listView-meta.xml
<ListView>
    <fullName>Product_Type</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Product_Segment__c</columns>
    <columns>Product_Class__c</columns>
    <columns>Product_Line__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Product Type</value>
    </filters>
    <label>Product Type</label>
</ListView>